Added navigation bar links

--- a/index.html
+++ b/index.html
@@ -13,14 +13,17 @@
 <body>
 
 
-   <div class="header">
-
-      <nav>
+   <nav>
+      <div class="logo">
          <h3 id="logo"> Header Logo </h3>
-
-      </nav>
-
-   </div>
+      </div>
+      <ul>
+         <li><i><a href="#">Home</a></i></li>
+         <li><i><a href="#">About</a></i></li>
+         <li><i><a href="#">Services</a></i></li>
+         <li><i><a href="#">Contact</a></i></li>
+      </ul>
+   </nav>
 
 </body>
 
