Added Main Section as well as placeholder img not img not set in place yet

--- a/index.html
+++ b/index.html
@@ -7,23 +7,45 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="stylesheet" href="style.css">
 
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
+
    <title>Odin Landing Page</title>
+
 </head>
 
 <body>
 
 
+   <!-- Navigation bar -->
    <nav>
       <div class="logo">
          <h3 id="logo"> Header Logo </h3>
       </div>
       <ul>
-         <li><i><a href="#">Home</a></i></li>
-         <li><i><a href="#">About</a></i></li>
-         <li><i><a href="#">Services</a></i></li>
-         <li><i><a href="#">Contact</a></i></li>
+         <li><i><a href="#" class="nav-links">Header Link One</a></i></li>
+         <li><i><a href="#" class="nav-links">Header Link Two</a></i></li>
+         <li><i><a href="#" class="nav-links">Header Link Three</a></i></li>
       </ul>
    </nav>
+
+   <!-- Main Section -->
+   <div class="Main-Section">
+
+      <div class="info">
+         <h1 id="main-title"> This Website is awesome!!</h1>
+
+         <p id="Subsection-Info"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quos. skldjfksdljf
+            sdlkfj slkfjsldkj flsdkjf lksjflksd jflksdj flksdjf lksjflksd jfklsdjf lksdjfk ldjf </p>
+
+         <a href="www.google.com"><button id="signup"> Sign Up</button></a>
+
+         <img src="placeholder.png">
+      </div>
+
+
+   </div>
 
 </body>
 
