Added Custom Scroll Bar

--- a/index.html
+++ b/index.html
@@ -41,11 +41,18 @@
 
          <a href="www.google.com"><button id="signup"> Sign Up</button></a>
 
-         <img src="placeholder.png">
+
       </div>
+      <img src="placeholder.png">
+
+   </div>
+
+
+   <div class="testing">
 
 
    </div>
+
 
 </body>
 
