Added Main section and hero section.

--- a/index.html
+++ b/index.html
@@ -43,14 +43,20 @@
 
 
       </div>
-      <img src="placeholder.png">
+      <img src="images/placeholder.png">
 
    </div>
 
 
-   <div class="testing">
+   <div class="Under-MainSect">
 
+      <h1 id="randinfoTitle">Some random Information</h1>
 
+      <div class="imgGallery">
+         <div class="imgSec"></div>
+         <div class="imgSec"></div>
+         <div class="imgSec"></div>
+      </div>
    </div>
 
 
