--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
          <p id="Subsection-Info"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quos. skldjfksdljf
             sdlkfj slkfjsldkj flsdkjf lksjflksd jflksdj flksdjf lksjflksd jfklsdjf lksdjfk ldjf </p>
 
-         <a href="www.google.com"><button id="signup"> Sign Up</button></a>
+            <button id="signup"><a href="www.google.com"> Sign Up</a></button>
 
 
       </div>
